# Detective

./: .gitignore  ARCHITECTURE.md  BUILD_PLAN.md  README.archive.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
Detective/: __init__.py  __main__.py  audit.py  call_sites.py  capture.py  certify.py  cli.py  cognitive_complexity.py  converge.py  decompose.py  decompose_apply.py  engine.py  equivalence.py  equivalents.py  mcp_server.py  minimize.py  parallel.py  purity.py  reachability.py  regime.py  samples.py  scope.py  suite_edit.py  verdict_cache.py
Detective/synthesis/: __init__.py  characterization.py  oracle_light.py  typed_synthesis.py  writer.py
dev/generators/: README.md  gen_scope_oracle_tests.py
tests/: _support.py  conftest.py  test__as_list_synth.py  test__binds_synth.py  test__collect_reads_synth.py  test__collect_writes_synth.py  test__compared_literals_synth.py  test__conftests_synth.py  test__covering_test_files_synth.py  test__format_decompose_synth.py  test__format_uncollected_synth.py  test__has_exit_statement_synth.py  test__headline_synth.py  test__is_ours_synth.py  test__kill_quality_warning_synth.py  test__layout_synth.py  test__literal_values_synth.py  test__test_names_in_source_synth.py  test__wanted_test_names_synth.py  test__written_count_synth.py  test_apply_migration_synth.py  test_audit_native.py  test_capture_call_inputs_synth.py  test_capture_native.py  test_certify_native.py  test_characterization_native.py  test_cli_converge_output_native.py  test_cli_decompose_residual_native.py  test_cli_native.py  test_converge_native.py  test_decompose_native.py  test_engine_shadow_native.py  test_equivalence_native.py  test_find_extraction_candidates_synth.py  test_mcp_decompose_residual_native.py  test_minimize_native.py  test_oracle_light_native.py  test_oracle_light_roundtrip_native.py  test_passes_to_complete_synth.py  test_plan_migration_synth.py  (+7 more)
