[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# The DISTRIBUTION name (what you install). The IMPORT name stays `Detective` — see
# [tool.hatch.build.targets.wheel] below. PyPI normalizes `Detective` to `detective`,
# which is taken by an unrelated project, so the two names cannot be the same string.
name = "detective-spec"
version = "0.2.0"
description = "Behavioral-scope diagnosis and warrant-classed test synthesis for a single Python function, on the Wesker mutation engine."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Rohan Vinaik" }]
keywords = [
    "mutation-testing",
    "test-generation",
    "code-comprehension",
    "specification",
    "ast",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

# Runtime deps: the Wesker mutation engine (the profiler) AND pytest — Detective's
# PRODUCT is pytest suites and it runs pytest to wire + verify them, so pytest is a
# runtime requirement, not dev-only.
#
# The PRE-PyPI-PUBLISH CHECKLIST that stood here is DONE, in its documented order:
# Wesker went to PyPI first, the git-URL became a plain package spec, and
# `[tool.uv.sources] Wesker` + `[tool.hatch.metadata] allow-direct-references` are gone.
# Both existed only for the git-URL dev path; a PyPI package depends on the PyPI package.
#
# >= 0.5.0 is a CORRECTNESS floor, not housekeeping. Below it the traced baseline pass — which
# runs BEFORE any mutant and costs a callback per executed line — has no budget at all, so a
# computationally heavy test in the target's suite makes `diagnose` hang with zero output: not a
# slow answer, no answer. 0.5.0 also stops abandoning timed-out test threads, which used to leak a
# live thread per timeout and make LATER mutants time out because earlier ones were still running.
#
# >= 0.4.0 was the previous floor. 0.3.0 gates `return_none` behind
# `not is_pure and (self_assigns or globals)`, so 92% of functions never have their return
# value questioned, and its kill attribution silently discards every kill a parametrized
# test earns. Detective's verdicts are only as honest as the engine underneath them.
#
# Local dev now resolves Wesker from PyPI like everyone else. To make edits in a sibling
# ../Wesker checkout live again, add back (uv-only; it never reaches the wheel metadata):
#     [tool.uv.sources]
#     Wesker = { path = "../Wesker", editable = true }
dependencies = [
    "Wesker>=0.5.0",
    "pytest>=7",
    # RUNTIME, not dev-only. Detective's PRODUCT is a test file written into someone
    # else's repo, and that file has to pass that repo's `ruff format --check` or it
    # turns their CI red — so the formatter is part of shipping the product, the same
    # way pytest is (Detective runs the suites it writes). Hand-matching ruff's layout
    # was the alternative and it does not converge: the line breaks in a parametrize
    # over 200-character AST snippets are the formatter's algorithm, not a style choice,
    # and it moves between versions. A wheel with no system toolchain; see
    # synthesis/writer._ruff_format.
    "ruff>=0.6",
]

# The MCP surface is optional so the core stays Wesker + stdlib only.
[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
detective = "Detective.cli:main"
detective-mcp = "Detective.mcp_server:main"

[project.urls]
Homepage = "https://github.com/rohanvinaik/Detective"
Repository = "https://github.com/rohanvinaik/Detective"

[dependency-groups]
# ruff pinned so CI's `ruff format --check` gate cannot drift on a newer release.
dev = ["pytest>=7", "pytest-cov>=4", "ruff==0.14.10"]

# Only the package ships. The dev/ generator tree (which imports LintGate as a
# dev-time conformance oracle) is deliberately excluded from the wheel so no
# LintGate reference ever enters the runtime import graph.
[tool.hatch.build.targets.wheel]
packages = ["Detective"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --strict-markers --strict-config"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Generated test files are machine-produced, not hand-maintained, so line length is
# exempt: the synth suites (`test_*_synth.py`) carry a long auto-generated docstring
# naming the fully-qualified target, and the scope-oracle fixtures embed the exact
# (deliberately long) expected warning strings the engine emits. Everything else in
# these files — imports, assertions, real bugs — is still linted.
"tests/test_*_synth.py" = ["E501"]
"tests/test_scope_oracle.py" = ["E501"]

[tool.coverage.run]
source = ["Detective"]
omit = ["Detective/cli.py", "Detective/__main__.py", "Detective/__init__.py"]
